--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -133,7 +133,7 @@
                                 laboris nisi ut aliquip ex ea commodo consequat.
                             </div>
 
-                            <div>
+                            <div class="btn-up">
                                 <div class="btn-group1">
                                     <button class="btn-sol"
                                         onclick="window.location.href='solutions.html'">estore3d</button>
