--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -157,32 +157,60 @@
 
                 <div class="flex-section">
 
-                    <div class="section-left-image">
-                        <img class="image" src="images/SalesPitch2-1.jpg" alt=""
-                            data-position="center center" />
+                    <div class="row">
 
-                    </div>
-                    <div class="content-sol-left">
-                        <!-- <div class="inner"> -->
-                        <header class="major">
-                            <a rel="noopener noreferrer">
-                                <h3 style="text-align: center;">3D Experience</h3>
-                            </a>
-                        </header>
-                        <p>
-                        <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Experience
-                                sale
-                                items in Full 3D</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Zoom, Rotate
-                                objects</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View objects
-                                in
-                                various environments such as a beach or living room. </li>
-                        </ul>
-                        </p>
+                        <div class="section-left-image col-lg-6">
+                            <div id="carouselExampleIndicators sol-2img" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100 " src="images/eSpace3D_App/scan_room.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/eSpace3D_App/scan_room.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/eSpace3D_App/scan_room.jpg" alt="Third slide">
+                                </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                                </a>
+                            </div>
 
-                        <!-- </div> -->
+                        </div>
+                        <div class="content-sol-left col-lg-6">
+                            <!-- <div class="inner"> -->
+                            <header class="major">
+                                <a rel="noopener noreferrer">
+                                    <h3 style="text-align: center;">3D Experience</h3>
+                                </a>
+                            </header>
+                            <p>
+                            <ul class="timeline-points expanded">
+                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Experience
+                                    sale
+                                    items in Full 3D</li>
+                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Zoom, Rotate
+                                    objects</li>
+                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View objects
+                                    in
+                                    various environments such as a beach or living room. </li>
+                            </ul>
+                            </p>
+
+                            <!-- </div> -->
+                        </div>
+
                     </div>
 
                 </div>
