--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -160,7 +160,7 @@
                     <div class="row">
 
                         <div class="section-left-image col-lg-6">
-                            <div id="carouselExampleIndicators sol-2img" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -171,10 +171,10 @@
                                     <img class="d-block w-100 " src="images/eSpace3D_App/scan_room.jpg" alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="images/eSpace3D_App/scan_room.jpg" alt="Second slide">
+                                    <img class="d-block w-100" src="images/eSpace3D_App/eSpace3D_Empty_Room.png" alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="images/eSpace3D_App/scan_room.jpg" alt="Third slide">
+                                    <img class="d-block w-100" src="images/eSpace3D_App/a-young-couple-buying-a-home-as-an-unmarried-couple-sits-on-couch-surrounded-by-boxes-social.jpg" alt="Third slide">
                                 </div>
                                 </div>
                                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
