--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -54,7 +54,7 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item ">
-                                        <a href="#usv">Concept</a>
+                                        <a href="index.html">Concept</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="#blur">Benefits</a>
