--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -1200,6 +1200,106 @@
                 </div>
             </section>
 
+            <hr class="hr-style-sol">
+
+            <section class="section-flex-right section-flex-right-sol2">
+
+                <div class="flex-section">
+                    <div class="content-sol-right col-lg-6">
+                        <!-- <div class="inner"> -->
+                        <header class="major">
+                            <a rel="noopener noreferrer">
+                                <h3>Undo / Redo</h3>
+                            </a>
+                        </header>
+                        <p>
+                        <ul class="timeline-points expanded">
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Undo / Redo operation supported for several operations.</li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Add and Deleting an object in Scene </li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Transforms (Move, Rotate, Scale) on an object in Scene.</li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Paints and Tiles are supported.</li>
+                        </ul>
+                        </p>
+                        <!-- </div> -->
+                    </div>
+                    <div class="section-right-image col-lg-6">
+
+                        <!-- <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100 " src="images/eSpace3D_App/scan_room.jpg"
+                                        alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/eSpace3D_App/eSpace3D_Empty_Room.png"
+                                        alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100"
+                                        src="images/eSpace3D_App/a-young-couple-buying-a-home-as-an-unmarried-couple-sits-on-couch-surrounded-by-boxes-social.jpg"
+                                        alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div> -->
+                        <div class="section-right-image">
+
+                            <img class="image" src="/html5up-forty/images/eSpace3D_App/undo-and-redo.png" alt=""
+                                data-position="center center" />
+                        </div>
+                    </div>
+
+                    
+
+                </div>
+            </section>
+
+            <hr class="hr-style-sol">
+
+            <section class="section-flex-left section-flex-left-sol2">
+                <div class="flex-section">
+
+                    <div class="section-left-image">
+
+                        <img class="image" src="/html5up-forty/images/eSpace3D_App/Console.png" alt=""
+                            data-position="center center" />
+                    </div>
+
+                    <div class="content-sol-left">
+                        <!-- <div class="inner"> -->
+                        <header class="major">
+                            <a rel="noopener noreferrer">
+                                <h3>Status Bar & Console</h3>
+                            </a>
+                        </header>
+                        <p>
+                        <ul class="timeline-points expanded">
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The status-bar will show messages useful for user. </li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The status-bar will disappear under normal usage. This is similar to popular applications like Google Chrome.</li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The Console is activated by the console button in the UI.</li>
+                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The Console shows deeper debugging messages. These are color-coded for information, warning and error.</li>
+                        </ul>
+                        </p>
+                        <!-- </div> -->
+                    </div>
+
+                </div>
+            </section>
+
 
         </section>
     </div>
