--- a/html5up-forty/index.html
+++ b/html5up-forty/index.html
@@ -41,7 +41,7 @@
 					<div class="col-lg-12">
 						<nav class="navbar navbar-expand-lg">
 							<a class="navbar-brand" href="index.html">
-								<img class="logotop" src="images/logofinal.png" alt="Logo">
+								<img class="logotop" src="images/logofinal-min.png" alt="Logo">
 							</a>
 							<button class="navbar-toggler" type="button" data-toggle="collapse"
 								data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -128,9 +128,9 @@
 			<h1 style="text-align: center; margin: 3% 0 3% 0;" class="h1-second">Why VisCommerce?</h1>
 			<div class="benefits-container" style="margin-bottom: 3%;">
 				<div class="box1" id="one">
-					<img src="images/Data_Trends-pana__2_-removebg-preview.png" alt="">
+					<img src="images/Data_Trends-pana__2_-removebg-preview-min.png" alt="">
 					<h3 class="h3-second">Grow revenue by more than 100% ?</h3>
-					<p style="font-size: larger; font-weight: bold;"> eStore3D … A 3D powered <br> eStore .</p>
+					<p style="font-weight: bold;"> eStore3D … A 3D powered <br> eStore .</p>
 					
 					<a href="#!" class="button-cards" onclick="toggle()">More</a>
 				</div>
@@ -138,15 +138,15 @@
 				<div class="box1" id="two">
 					<img src="images/benefits2new-removebg-preview.png" alt="">
 					<h3 class="h3-second"> Acquire customers for life ?</h3>
-					<p style="font-size: larger; font-weight: bold;">eSpace3D App … A Digital-Twin of Customer’s space .
+					<p style="font-weight: bold;">eSpace3D App … A Digital-Twin of Customer’s space .
 					</p>
 
 					<a href="#!" class="button-cards" onclick="toggle2()">More</a>
 				</div>
 				<div class="box1" id="three">
-					<img src="images/benefits3-removebg-preview.png" alt="">
+					<img src="images/benefits3-removebg-preview-min.png" alt="">
 					<h3 class="h3-second"> Sell big-ticket items easily ?</h3>
-					<p style="font-size: larger; font-weight: bold;"> Collaboration3D … Collaboration with 3D, Video &
+					<p style="font-weight: bold;"> Collaboration3D … Collaboration with 3D, Video &
 						Chat .</p>
 					<a href="#!" class="button-cards" onclick="toggle3()">More</a>
 				</div>
@@ -155,13 +155,13 @@
 
 		<div class="generic-maincontainer" id="popup">
 			<div class="generic-container">
-				<img class="popupimg" src="./images/houzz.png" alt="">
+				<img class="popupimg" src="./images/houzz-min.png" alt="">
 				<p>11 x the ratio of visitors who view
 					3D models who buy compared to those who don’t.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img class="popupimg" src="./images/shop.png" alt="">
+				<img class="popupimg" src="./images/shop-min.png" alt="">
 				<p>Leveraging 3D and AR can increase conversion by up to 250%.
 				</p>
 			</div>
@@ -177,12 +177,12 @@
 
 		<div class="generic-maincontainer" id="popup2">
 			<div class="generic-container">
-				<img class="popupimg" src="./images/canvas.png" alt="">
+				<img class="popupimg" src="./images/canvas-min.png" alt="">
 				<p>Digital-twin via re-constructed 3D models used for interior-designing.
 				</p>
 			</div>
 			<div class="generic-container">
-				<img class="popupimg" src="./images/Picture6.png" alt="">
+				<img class="popupimg" src="./images/Picture6-min.png" alt="">
 				<p>Digital-twin via re-constructed 3D models used for sales.
 				</p>
 			</div>
@@ -192,7 +192,7 @@
 				</p>
 			</div>
 			<div class="generic-container">
-				<img class="popupimg" src="./images/salesnobg.png" alt="">
+				<img class="popupimg" src="./images/salesnobg-min.png" alt="">
 				<p>84% of consumers say being treated like a person, is very important to winning their business.
 				</p>
 			</div>
@@ -204,7 +204,7 @@
 
 		<div class="generic-maincontainer" id="popup3">
 			<div class="generic-container">
-				<img class="popupimg" src="./images//Picture9.png" alt="">
+				<img class="popupimg" src="./images//Picture9-min.png" alt="">
 				<p>Customers who chat with a brand convert three times more often.
 				</p>
 			</div>
