--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -41,7 +41,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img class="logotop" src="images/logofinal.png" alt="Logo">
+                                <img class="logotop" src="images/logofinal-min.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -74,7 +74,7 @@
 
                                 </ul>
                                 <div class="navbar-btn d-none d-sm-inline-block">
-                                    <a class="main-btn" data-scroll-nav="0" href=" http://viscommerce.com/eSpace3D.html"
+                                    <a class="main-btn" data-scroll-nav="0" href="http://viscommerce.com/eSpace3D.html"
                                         rel="nofollow">eSpace3D App</a>
                                 </div>
                                 <div id="button2" class="navbar-btn d-none d-sm-inline-block">
@@ -171,12 +171,12 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Experience
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Experience
                                 sale
                                 items in Full 3D</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Zoom, Rotate
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Zoom, Rotate
                                 objects</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View objects
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> View objects
                                 in
                                 various environments such as a beach or living room. </li>
                         </ul>
@@ -203,11 +203,11 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change color
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Change color
                                 of sofa cloth</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Change
                                 textures</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Tryout
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Tryout
                                 various types of legs e.g Stainless steel, Wood</li>
                         </ul>
                         </p>
@@ -216,7 +216,7 @@
                     <div class="section-right-image">
 
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/change_appearance.png" alt=""
+                            src="images/eStore3d/change_appearance.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -231,7 +231,7 @@
                     <div class="section-left-image">
 
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/lights-control.png" alt=""
+                            src="images/eStore3d/lights-control.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -244,13 +244,13 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn lights
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn lights
                                 on /
                                 off</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change color
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Change color
                                 of
                                 light with controls for Red, Green, Blue</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Change
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Change
                                 Brightness </li>
                         </ul>
                         </p>
@@ -276,10 +276,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -290,7 +290,7 @@
                     <div class="section-right-image">
 
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/operate-cabinets.png" alt=""
+                            src="images/eStore3d/operate-cabinets.png" alt=""
                             data-position="center center" />
                     </div>
                 </div>
@@ -305,7 +305,7 @@
                     <div class="section-left-image">
 
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/dimensions-sofa.png" alt=""
+                            src="images/eStore3d/dimensions-sofa.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -318,9 +318,9 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View length,
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> View length,
                                 width and other dimensions</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Use
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Use
                                 centi-meters, meters or feet</li>
                         </ul>
                         </p>
@@ -344,10 +344,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> View
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> View
                                 sale-items
                                 in Standalone and Inscene mode.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Inscene mode
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Inscene mode
                                 allows combinations such as lamps, lights, paints. </li>
                         </ul>
                         </p>
@@ -357,7 +357,7 @@
                     <div class="section-right-image">
 
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/SimpleChair_Inscene0005.png" alt=""
+                            src="images/eStore3d/SimpleChair_Inscene0005.png" alt=""
                             data-position="center center" />
                     </div>
                 </div>
@@ -371,7 +371,7 @@
 
                     <div class="section-left-image">
                         <img class="image"
-                            src="/html5up-forty/images/eStore3d/technologies-used.png" alt=""
+                            src="images/eStore3d/technologies-used.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -384,15 +384,15 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Developed
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Developed
                                 using Web-Technologies Html5, CSS, Javascript glTF</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Google’s
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Google’s
                                 model-viewer and Open-Source threejs.org used to render 3D content</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Can be
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Can be
                                 integrated with any eCommerce system (Magento, OpenCart)</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Developed and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Developed and
                                 tested on Windows, iOS and Android</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Tested with
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Tested with
                                 all major browsers Google-Chrome, Microsoft Edge, Apple Safari, Mozilla Firefox </li>
                         </ul>
                         </p>
