--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -41,7 +41,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img class="logotop" src="images/logofinal.png" alt="Logo">
+                                <img class="logotop" src="images/logofinal-min.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -211,12 +211,12 @@
                             </header>
                             <p>
                             <ul class="timeline-points expanded">
-                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">
+                                <li><img class="image-gap" src="images/checkmark-24.png" alt="">
                                     User takes pictures of their space using ordinary smart-phone or DSLR camera</li>
-                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> User uploads pictures to viscommerce.com site via Web-Browser or native clients</li>
-                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Using the pictures and an AI program MeshRoom a 3D model is reconstructed.  </li>
-                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">From reconstruced 3D model a scale-accurate CAD model is developed with Blender  </li>
-                                <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Package up CAD model into “eSpace3D App” for user to download and use. </li>
+                                <li><img class="image-gap" src="images/checkmark-24.png" alt=""> User uploads pictures to viscommerce.com site via Web-Browser or native clients</li>
+                                <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Using the pictures and an AI program MeshRoom a 3D model is reconstructed.  </li>
+                                <li><img class="image-gap" src="images/checkmark-24.png" alt="">From reconstruced 3D model a scale-accurate CAD model is developed with Blender  </li>
+                                <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Package up CAD model into “eSpace3D App” for user to download and use. </li>
                             </ul>
                             </p>
 
@@ -243,12 +243,12 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Zoom using mouse and  keyboard keys (up, down).</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Pan screen in ‘X’ and ‘Y’ directions. </li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Rotate model around ‘Y’ axis. </li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Reset scene to original camera settings.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Viewpoints let’s a user select from a pre-defined camera positions such as “front”, “back”, “left”, “right”, “top”.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Modelled on Unity3D and Blender. </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Zoom using mouse and  keyboard keys (up, down).</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Pan screen in ‘X’ and ‘Y’ directions. </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Rotate model around ‘Y’ axis. </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Reset scene to original camera settings.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Viewpoints let’s a user select from a pre-defined camera positions such as “front”, “back”, “left”, “right”, “top”.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Modelled on Unity3D and Blender. </li>
                         </ul>
                         </p>
                         <!-- </div> -->
@@ -289,7 +289,7 @@
                         </div> -->
                         <div class="section-right-image">
 
-                            <img class="image" src="/html5up-forty/images/eStore3d/scene-navigation.png" alt=""
+                            <img class="image" src="images/scene-navigation.png" alt=""
                                 data-position="center center" />
                         </div>
                     </div>
@@ -306,7 +306,7 @@
 
                     <div class="section-left-image">
 
-                        <img class="image" src="/html5up-forty/images/eStore3d/object-operations.png" alt=""
+                        <img class="image" src="images/eStore3d/object-operations.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -319,12 +319,12 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Select an object at a time with mouse left button.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Deselect will deselect and remove highlight of selected object.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Delete will delete the selected object</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Move, Rotate, Scale – As their names suggest they will make “Gizmos” visible that enable ‘move’, ‘rotate’ and ‘scale’ for selected object</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Reset will remove highlight and gizmos from selected object.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Modelled on Unity3D and Blender </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Select an object at a time with mouse left button.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Deselect will deselect and remove highlight of selected object.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Delete will delete the selected object</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Move, Rotate, Scale – As their names suggest they will make “Gizmos” visible that enable ‘move’, ‘rotate’ and ‘scale’ for selected object</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Reset will remove highlight and gizmos from selected object.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Modelled on Unity3D and Blender </li>
                         </ul>
                         </p>
                         <!-- </div> -->
@@ -349,10 +349,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -494,10 +494,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -638,10 +638,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -772,10 +772,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -906,10 +906,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -1071,10 +1071,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Open and
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Open and
                                 close
                                 doors</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt=""> Turn on
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt=""> Turn on
                                 lights
                                 inside</li>
                         </ul>
@@ -1214,10 +1214,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Undo / Redo operation supported for several operations.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Add and Deleting an object in Scene </li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Transforms (Move, Rotate, Scale) on an object in Scene.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">Paints and Tiles are supported.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Undo / Redo operation supported for several operations.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Add and Deleting an object in Scene </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Transforms (Move, Rotate, Scale) on an object in Scene.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">Paints and Tiles are supported.</li>
                         </ul>
                         </p>
                         <!-- </div> -->
@@ -1258,7 +1258,7 @@
                         </div> -->
                         <div class="section-right-image">
 
-                            <img class="image" src="/html5up-forty/images/eSpace3D_App/undo-and-redo.png" alt=""
+                            <img class="image" src="images/eSpace3D_App/undo-and-redo.png" alt=""
                                 data-position="center center" />
                         </div>
                     </div>
@@ -1275,7 +1275,7 @@
 
                     <div class="section-left-image">
 
-                        <img class="image" src="/html5up-forty/images/eSpace3D_App/Console.png" alt=""
+                        <img class="image" src="images/eSpace3D_App/Console.png" alt=""
                             data-position="center center" />
                     </div>
 
@@ -1288,10 +1288,10 @@
                         </header>
                         <p>
                         <ul class="timeline-points expanded">
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The status-bar will show messages useful for user. </li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The status-bar will disappear under normal usage. This is similar to popular applications like Google Chrome.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The Console is activated by the console button in the UI.</li>
-                            <li><img class="image-gap" src="/html5up-forty/images/checkmark-24.png" alt="">The Console shows deeper debugging messages. These are color-coded for information, warning and error.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">The status-bar will show messages useful for user. </li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">The status-bar will disappear under normal usage. This is similar to popular applications like Google Chrome.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">The Console is activated by the console button in the UI.</li>
+                            <li><img class="image-gap" src="images/checkmark-24.png" alt="">The Console shows deeper debugging messages. These are color-coded for information, warning and error.</li>
                         </ul>
                         </p>
                         <!-- </div> -->
