--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -202,7 +202,7 @@
                             </div>
 
                         </div>
-                        <div class="content-sol-left col-lg-6">
+                        <div class="content-sol-left col-lg-6 content-margin-left">
                             <!-- <div class="inner"> -->
                             <header class="major">
                                 <a rel="noopener noreferrer">
@@ -229,12 +229,12 @@
 
             </section>
 
-            <hr class="hr-style-sol">
+            <hr class="hr-style-sol hr-style-sol2">
 
             <section class="section-flex-right section-flex-right-sol2">
 
                 <div class="flex-section">
-                    <div class="content-sol-right col-lg-6">
+                    <div class="content-sol-right col-lg-6 content-margin-right" >
                         <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
@@ -287,7 +287,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div> -->
-                        <div class="section-right-image">
+                        <div class="section-right-image image-margin-right">
 
                             <img class="image" src="/html5up-forty/images/eStore3d/scene-navigation.png" alt=""
                                 data-position="center center" />
@@ -299,18 +299,18 @@
                 </div>
             </section>
 
-            <hr class="hr-style-sol">
+            <hr class="hr-style-sol hr-style-sol2">
 
             <section class="section-flex-left section-flex-left-sol2">
                 <div class="flex-section">
 
-                    <div class="section-left-image">
+                    <div class="section-left-image image-margin-left">
 
                         <img class="image" src="/html5up-forty/images/eStore3d/object-operations.png" alt=""
                             data-position="center center" />
                     </div>
 
-                    <div class="content-sol-left">
+                    <div class="content-sol-left content-margin-left">
                         <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
@@ -333,7 +333,7 @@
                 </div>
             </section>
 
-            <hr class="hr-style-sol">
+            <hr class="hr-style-sol hr-style-sol2">
 
             <section class="section-flex-right carousel-full">
 
@@ -478,7 +478,7 @@
                 </div>
             </section>
 
-            <hr class="hr-style-col">
+            <hr class="hr-style-col hr-style-sol2">
 
             <section class="section-flex-right carousel-full">
 
@@ -622,7 +622,7 @@
                 </div>
             </section>
 
-            <hr class="hr-style-col">
+            <hr class="hr-style-col hr-style-sol2">
 
             <section class="section-flex-right carousel-full">
 
@@ -756,7 +756,7 @@
                 </div>
             </section>
 
-            <hr class="hr-style-col">
+            <hr class="hr-style-col hr-style-sol2">
 
             <section class="section-flex-right carousel-full">
 
@@ -890,7 +890,7 @@
                 </div>
             </section>
 
-            <hr class="hr-style-col">
+            <hr class="hr-style-col hr-style-sol2">
 
             <section class="section-flex-right carousel-full">
 
@@ -1200,12 +1200,12 @@
                 </div>
             </section>
 
-            <hr class="hr-style-sol">
+            <hr class="hr-style-sol hr-style-sol2">
 
             <section class="section-flex-right section-flex-right-sol2">
 
                 <div class="flex-section">
-                    <div class="content-sol-right col-lg-6">
+                    <div class="content-sol-right col-lg-6 content-margin-right">
                         <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
@@ -1256,7 +1256,7 @@
                                 <span class="sr-only">Next</span>
                             </a>
                         </div> -->
-                        <div class="section-right-image">
+                        <div class="section-right-image image-margin-right">
 
                             <img class="image" src="/html5up-forty/images/eSpace3D_App/undo-and-redo.png" alt=""
                                 data-position="center center" />
@@ -1268,18 +1268,18 @@
                 </div>
             </section>
 
-            <hr class="hr-style-sol">
+            <hr class="hr-style-sol hr-style-sol2">
 
             <section class="section-flex-left section-flex-left-sol2">
                 <div class="flex-section">
 
-                    <div class="section-left-image">
+                    <div class="section-left-image image-margin-left">
 
                         <img class="image" src="/html5up-forty/images/eSpace3D_App/Console.png" alt=""
                             data-position="center center" />
                     </div>
 
-                    <div class="content-sol-left">
+                    <div class="content-sol-left content-margin-left">
                         <!-- <div class="inner"> -->
                         <header class="major">
                             <a rel="noopener noreferrer">
