--- a/html5up-forty/solutions.html
+++ b/html5up-forty/solutions.html
@@ -40,7 +40,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
-                            <a class="navbar-brand" href="index.html">
+                            <a class="navbar-brand" href="index.html" onclick="window.location.href='index.html'">
                                 <img class="logotop" src="images/logofinal-min.png" alt="Logo">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -54,32 +54,32 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ml-auto">
                                     <li class="nav-item ">
-                                        <a href="index.html">Concept</a>
+                                        <a href="index.html#usv" onclick="window.location.href='index.html#usv'">Concept</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#blur">Benefits</a>
+                                        <a href="index.html#blur" onclick="window.location.href='index.html#blur'">Benefits</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#blur5">Demo</a>
+                                        <a href="index.html#blur5" onclick="window.location.href='index.html#blur5'">Demo</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="solutions.html">Solutions</a>
+                                        <a href="solutions.html" onclick="window.location.href='solutions.html'">Solutions</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#blur4">Patent</a>
+                                        <a href="index.html#blur4" onclick="window.location.href='index.html#blur4'">Patent</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#blur6">Team</a>
+                                        <a href="index.html#blur6" onclick="window.location.href='index.html#blur6'">Team</a>
                                     </li>
 
                                 </ul>
                                 <div class="navbar-btn d-none d-sm-inline-block">
                                     <a class="main-btn" data-scroll-nav="0" href="http://viscommerce.com/eSpace3D.html"
-                                        rel="nofollow">eSpace3D App</a>
+                                        rel="nofollow" onclick="op1()">eSpace3D App</a>
                                 </div>
                                 <div id="button2" class="navbar-btn d-none d-sm-inline-block">
                                     <a class="main-btn" data-scroll-nav="0" href="http://viscommerce.com/estore3d/"
-                                        rel="nofollow">eStore3D</a>
+                                        rel="nofollow" onclick="op2()">eStore3D</a>
                                 </div>
                             </div> <!-- navbar collapse -->
 
@@ -404,7 +404,15 @@
 
         </section>
     </div>
+    <script>
+        function op1(){
+            window.location.href='http://viscommerce.com/eSpace3D.html'
+        }
 
+        function op2(){
+            window.location.href='http://viscommerce.com/estore3d/'
+        }
+    </script>
 
 
 </body>
