--- a/html5up-forty/solutions2.html
+++ b/html5up-forty/solutions2.html
@@ -168,7 +168,7 @@
                         <div class="col-lg-1"></div>
 
                         <div class="section-left-image col-lg-5" style="display: flex; align-items: center;">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                            <div id="carouselExampleIndicators" class="carousel slide toto" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
